docs(sales/products): documentação para as rotas sales e products
