# routes/sales.routes.js
@@ -4,9 +4,9 @@ const router = express.Router();
 
 const { salesController } = require('../controllers/salesController');
 
-router.post('/', salesController.addSale);
-router.get('/', salesController.getAll);
 router.get('/:id', salesController.getById);
+router.get('/', salesController.getAll);
+router.post('/', salesController.addSale);
 router.put('/:id', salesController.updateById);
 router.delete('/:id', salesController.deleteById);
 
